<resources>
    <string name="app_name">MyDraw</string>
    <string name="app_bar_name">Вадим Смирнов</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Вадим Смирнов</string>
    <string name="nav_header_subtitle">художник-философ </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_painting">Живопись</string>
    <string name="drawer_graphics">Графика</string>
    <string name="drawer_photo">Фотоархив</string>
    <string name="drawer_poetry">Поэзия</string>
    <string name="drawer_interview">Интервью</string>
    <string name="drawer_about_split_line">О художнике</string>
    <string name="drawer_bio">Биография</string>
    <string name="drawer_about">Отзывы о творчестве</string>
    <string name="p19_name">Натюрморт с цветущим абрикосом</string>
    <string name="p19_detail">Холст на картоне 1999</string>
    <string name="s11_p_name">Нико Пирасмани</string>
    <string name="s11_p_detail">Xoлст, масло | 81x59,5 | 1975</string>
    <string-array name="spinner_top">
        <item>знакомство</item>
        <item>живопись</item>
        <item>графика</item>
    </string-array>
    <string-array name="spinner_paint">
        <item>1974\-2011</item>
        <item>1974\-1979</item>
        <item>1980\-1989</item>
        <item>1990\-1999</item>
        <item>2000\-2011</item>
    </string-array>
    <string-array name="spinner_pics">
        <item>1972\-2012</item>
        <item>1972\-1979</item>
        <item>1980\-1989</item>
        <item>1990\-1999</item>
        <item>2000\-2012</item>
    </string-array>
    <string-array name="spinner_photo">
        <item>1970\-2011</item>
    </string-array>
    <string name="btn_next_txt">\u232A</string>
    <string name="btn_previous_txt">\u2329</string>
    <string name="expand_button" />
    <string name="poem1">Иcтория Х \n\n
    Где-то жил человек, \n
    Его звали Иисус. \n
    Говорят, он ходил по воде. \n
    Он рассказывал людям, \n
    Что в смерти есть смысл \n
    И что жизнь – всегда и везде, \n
    Что не нужно бояться совсем ничего, \n
    В том числе тем, кто сеет обман, \n
    А люди смотрели и вверх, и вниз, \n
    Но видели только туман. \n\n

    Он поднялся на гору, \n
    К нему сошлись все, кто чего-то хотел, \n
    И он им сказал, что каждый из них \n
    Несёт в себе свой удел. \n\n

    Потом он пошёл и взобрался на крест \n
    И умер там, в вышине, \n
    А люди стали судить и гадать, \n
    Кем был он и быть ли войне… \n\n

    Затем они начали строить дома \n
    По всей грешной земле, \n
    На крышах домов воздвигали кресты \n
    И жили, как на корабле. \n
    Одни из них молились всю жизнь, \n
    Другие носили пальто, \n
    Одних  из них запомнили все, \n
    Других не запомнил никто. \n\n

    И вот кто-то сказал, что он был бог \n
    И пришёл, чтоб нас спасти, \n
    А кто-то сказал, что он был лжец – \n
    О нём память нужно смести. \n
    Ещё один сказал, что он принёс \n
    Не мир, но меч с собой. \n
    Другой же ответил на это, что он \n
    Всех заберёт в мир иной. \n
    И каждый сказал то, что сказал, \n
    И был нарушен покой. \n
    И в каждом родилось сомненье, \n
    Был ли Он или кто-то другой, \n
    Ещё один сказал, что он – боль и любовь, \n
    Другой – что мираж и обман. \n
    И люди смотрели вправо и влево, \n
    И видели тот же туман. \n\n

    Всё так же день сменяла ночь, \n
    Был шум и была тишина. \n
    Всё так же где-то кто-то смеялся \n
    И где-то гремела война. \n
    Все ждали, что он опять придёт, \n
    И вновь расскажет, как жить. \n
    И каждый из них хотел быть богаче \n
    И жизнь спокойно прожить. \n\n

    Трава под ногами устала расти \n
    И камни стёрлись в песок. \n
    Огонь потух, соль осела на дно, \n
    А он всё никак не шёл. \n
    И вот один решил стать вождём, \n
    Другой же взял пулемёт, \n
    Третий себя объявил святым, \n
    Четвёртый сказал, что уйдёт, \n
    Пятый сказал – нужно есть и пить, \n
    Шестой – что мир нужно взорвать. \n
    Седьмой сказал, что жизнь – это сон, \n
    И ему на всё наплевать. \n
    И каждый взял в руки то, что он взял, \n
    И думал, что он живёт. \n
    И каждый хотел бы что-то создать, \n
    Но каждый забыл, что умрёт. \n\n

    И вот опять случилось так, \n
    Что началась в мире война, \n
    И все хотели бы знать – почему? \n
    И в чём же была их вина. \n
    А солнце смотрело на землю с тоской \n
    И в реках текла вода, \n
    И где-то по-прежнему радость была, \n
    А где-то была беда. \n
    И люди ходили взад и вперёд, \n
    Искали, где же он есть, \n
    А он никуда и не уходил, \n
    Потому, что всегда был здесь. \n\n

    Мораль здесь проста: \n
    Неважно, кем был он – бог \n
    Или просто больной… \n
    Важно то, что мы все в себе несём – \n
    Мир здоровый или чумной. \n\n

    А вот и Postscriptum – \n
    Дело должно бы уже идти к тишине, \n
    Но вот, похоже, что люди опять готовятся \n
    К новой войне. \n
    Давайте подумаем, как нам жить \n
    В покое, труде и любви, \n
    Или же мы возьмём в руки топор \n
    И все утонем в крови. \n
    </string>
    <string name="poem2">Что сказать мне брату… \n
        Посвящается другу А. Бондаренко\n\n

Что сказать мне брату… \n
Как ему помочь?.. \n
Если так случается, \n
Что день сменяет ночь. \n

Ночь плывёт в артериях, \n\n
Ночь звенит в ушах… \n
Так споём ей песню \n
На твой риск, мой страх. \n

Не будем печалиться, \n\n
Что день позади. \n
Он ещё настанет, \n
– ты его не жди… \n
Будет ещё солнце, \n
Странное, как ноль. \n
И вода прохладная \n
Смоет твою боль. \n
Будет небо синее \n
И на нём трава. \n
Будут ветки жёлтыми, \n
А потом… дрова. \n
Будут знаки звонкие, \n
Как бога слова, \n
Будет символ вечен, \n
Как коротка жизнь. \n
А она смятенна – \n
Так что ты держись. \n
А пока мы в сумерках \n
Бродим, как слепцы, \n
Но пока мы в сумерках \n
Богу мы отцы. \n
И пока мы в сумерках, \n
Зри священный НОЛЬ, \n
И пусть вода тяжёлая \n
Смоет твою боль. \n\n

31 июля 1997



    </string>
    <string name="poem3">Осень \n\n
    Осень \n
    Падают листья \n
    Туман\n\n

    1997
    </string>
    <string name="poem4">Зелёное небо… \n\n
    Зелёное небо в красной реке, \n
    Ступни тумана на влажном песке, \n
    Молчание птиц и на камне лоза \n
    И твои серые, как дождь, глаза. \n\n

    Бёдра деревьев, спины холмов, \n
    Бурые пастбища, стон городов, \n
    Капелька крови, неба гроза \n
    И твои серые, как снег, глаза. \n\n

    Сто двадцать дней \n
    И пятнадцать лет, \n
    И старой памяти \n
    Мягкий скелет. \n
    В вышивке танца кружит стрекоза \n
    И твои серые, как тьма, глаза. \n\n

    Гудение фуги прошедшего лета, \n
    В падении листьев звуки привета, \n
    На травах бессонных надежды роса \n
    И твои серые, как свет, глаза. \n\n

    На панцире времени \n
    Вечности слеза \n
    И твои серые, как Sмерть, глаза. \n\n

    4 августа 2001
    </string>
    <string name="poem5"> На смерть Лиды \n\n
    Горы… и локоны, \n
    и взгляд усталый, \n
    руки журчащие, \n
    руки натружены. \n
    Мечты и желания \n
    в капельку сужены. \n
    Птицы полёт \n
    в вечность направлен. \n
    Что же осталось? \n
    – Небо и травы. \n\n

    10 января 2006
    </string>
    <string name="poem6"> Ты живёшь где-то здесь… \n\n
    Ты живёшь где-то здесь, \n
    Я живу где-то там… \n
    Попадись на глаза, \n
    Я отдамся мечтам. \n
    Где-то здесь был покой, \n
    Где-то там – тишина, \n
    Там сгорела свеча, \n
    Здесь погасла луна. \n
    Мы идём в темноте, \n
    Мы с тобой уже там, \n
    Ты несёшь букет роз, \n
    Я ударил в там-там. \n
    …Вот удары грозы, \n
    Нас пронзил огнемёт, \n
    Мы горим, как трава, \n
    Их сверлит пулемёт, \n
    Дай им Бог понять жизнь, \n
    Нам узнать, что есть смерть. \n
    Наши дети молчат – \n
    Их давно с нами нет. \n
    Мы стреляем в грозу \n
    – Вот цепочка из стрел… \n
    Ты достигла границ, \n
    Я узнал, где предел \n
    Выше всяких похвал, \n
    Ниже всякой воды… \n
    Наши руки, как пепел, \n
    А глаза из слюды. \n
    Помолись за детей, \n
    Попроси и за нас, \n
    Чтобы в них исчез страх, \n
    В нас – расцвёл третий глаз. \n
    </string>
    <string name="poem7">Наяву \n\n
    Ты сидел и мечтал, \n
    Ты хотел бы жить, \n
    Ты встал и упал – \n
    Вот и вся твоя жизнь. \n\n

    Ты встал и сделал семь шагов на восток \n
    И ты понял, что путь твой бесконечно далёк. \n
    Ты лёг и стал смотреть в потолок. \n
    Ты хотел видеть небо, \n
    Но не знал, где твой бог. \n\n

    Ты встал и сделал три шага на юг, \n
    Ты увидел могилу и скопище мух. \n
    Ты поднял к небу руки, \n
    Ты упал на холме, \n
    Ты услышал звук флейты и призыв к войне, \n
    Ты измазался краской, \n
    Ты отгрыз кисти рук, \n
    Ты хотел быть героем \n
    И познать радость мук. \n\n

    Один шаг на запад, и жизнь кувырком, \n
    Бренчание ресниц и утренний гром. \n
    И ветви деревьев схватили тебя, \n
    И капли тумана душили, любя \n
    Твою плоть, \n
    И твой мозг, пожелтев, растворился в траве, \n
    И ты стал пылинкой на белой листве. \n
    И гипсовый иней, и пластика дым \n
    Вдыхал ты и верил, что станешь немым. \n
    Ты слился с холстом, он тебя отшвырнул, \n
    Ты глянул под ноги, увидел разлом, \n
    Ты сел и заплакал о чём-то былом. \n\n

    Один взгляд на север, \n
    И вот – белизна \n
    Проникла в тебя, как немая луна. \n
    Ты выкопал яму и на спину лёг, \n
    Ты ткнул взглядом небо, как бешеный бог, \n
    Ты бегал и прыгал, кричал и смеялся, \n
    Взбирался на горы, на дно опускался. \n
    Ты гнался за тенью, ты жаждал стать веком, \n
    Ты просто забыл, что ты был человеком. \n

    </string>
    <string name="poem8"> Вчера ребёнок, завтра бог… \n\n
Вчера ребёнок, завтра бог. \n
Открыта всем ветрам. \n
Исток всех рек и… \n
пламя… \n
земли надежда, тысячи Дорог. \n
Немое сердце – трепетное знамя. \n
– Кто ты? – лежащая ничком \n
Или летящая, как чайка в центре бури? \n
Крутящаяся в море колдовском \n
Или сидящая тихонечко на стуле? \n
Смотри, – вон там в окне звезда – она твоя, \n
Ей имя Вечность, Слава и Сомненье. \n
Иди за ней, расступятся моря, \n
И вечная стена растает в вожделенье. \n
Возьми в рюкзак с собой полынь, \n
Чертополох, чабрец, чай, книгу, хлеб и розу. \n
Сотри ладони в кровь, но заберись \n
На вековечную и древнюю, как мир, берёзу. \n\n

Наградой тебе будет небо и земля, \n
Глубины вечных вод и гор терпенье. \n
В тени лесов и пустоте пустынь, \n
На башнях городов узнаешь наслажденье. \n
Вчера останется вчера, \n
Что будет завтра – птица пусть расскажет. \n
Живи сегодня – будет жизни тихая игра, \n
И Одноглазый бог тихонько скажет: \n
– Будь счастлива! Теперь ты есть, что есть, \n
Ты пламя и вода, земля и ветер. \n
Живи же вечно и люби всегда \n
И украшай собою всё на свете. \n
    </string>
    <string name="about1_title">А.Н.    >></string>
    <string name="about2_title">Георгий Беляев (2010)    >></string>
    <string name="about3_title">Георгий Беляев (2012)    >></string>
    <string name="about4_title">Илья Офлиянц    >></string>
    <string name="about5_title">Снежана Иванива    >></string>
</resources>