<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".AboutListFragment">


    <TextView
        android:id="@+id/first_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about1_title"
        android:textSize="16sp"/>
    <TextView
        android:id="@+id/second_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about2_title"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/third_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about3_title"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/fourth_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about4_title"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>
    <TextView
        android:id="@+id/fifth_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about5_title"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

</LinearLayout>